--- a/NewrorkChatClient/pom.xml
+++ b/NewrorkChatClient/pom.xml
@@ -87,13 +87,17 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
             <groupId>NetworkChat</groupId>
             <artifactId>NetworkChatClientServer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -111,8 +115,6 @@
                 <version>0.0.1</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running -->
-                        <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>ru.avk.client.ClientChat</mainClass>
